Card component dark mode fixes (#781)
* apply max-width to top-level Card element

* remove duplicate border on dark mode Cards, and clarify behaviour in documentation

* add changeset

* update tests

* update snapshots

* github-actions[bot] Regenerated snapshots

* add wait for RiverStoryScroll snapshot default story

* github-actions[bot] Regenerated snapshots

---------

--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -1,5 +1,4 @@
 .Card {
-  max-width: var(--brand-Card-maxWidth);
   text-decoration: none;
   color: var(--brand-color-text-default);
   border-radius: var(--brand-borderRadius-large);
@@ -18,6 +17,10 @@
   grid-template-rows: auto auto auto auto 1fr;
   position: relative;
   height: 100%;
+}
+
+.Card--maxWidth {
+  max-width: var(--brand-Card-maxWidth);
 }
 
 .Card--fullWidth {
@@ -275,7 +278,6 @@
 }
 
 .Card__skew-bounding {
-  border: var(--brand-borderWidth-thin) solid var(--brand-color-border-default);
   border-radius: var(--brand-borderRadius-large);
   position: relative;
   z-index: 1;
